[package]
name = "portfolio_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
openssl = "0.10.66"
openssl-sys = "0.9.103"
serde = "1.0.210"
tokio = {version = "1.0", features = ["full"] }
yahoo-finance = "0.3.0"
yahoo_finance_api = "2.3.0"
chrono = "0.4.39"
time = "0.3.37"
